fix setup jdk, add distribution

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,7 +15,9 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
+          distribution: 'temurin'
           java-version: '17'
+          cache: 'maven'
 
       - name: Run tests
         run: mvn test
@@ -34,7 +36,9 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
+          distribution: 'temurin'
           java-version: '17'
+          cache: 'maven'
           
       - name: Build package without tests
         run: mvn clean package -DskipTests
